--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>East Park Basketball Club</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <h1>East Park Basketball Club</h1>
+      <div id="hamburger"></div>
       <nav>
         <a href="#">Events</a>
         <a href="#">Activities</a>
         <a href="#">Contact</a>
       </nav>
     </header>
+    <div class="banner"></div>
     <main>
-      <div class="banner"></div>
       <h2>Come join the fun!</h2>
       <p>
         The goal of the basketball club is to create a comfortable environment
@@ -29,22 +30,28 @@
         opportunities to create lasting friendships with people who share
         similar hobbies and interests.
       </p>
-      <figure>
-        <img src="images/photo01@2x.png" alt="image photo01" />
-      </figure>
-      <figure>
-        <img src="images/photo02@2x.png" alt="image photo02" />
-      </figure>
-      <figure>
-        <img src="images/photo03@2x.png" alt="image photo03" />
-      </figure>
-      <figure>
-        <img src="images/photo04@2x.png" alt="image photo04" />
-      </figure>
+      <div class="photos">
+        <figure>
+          <img src="images/photo01@2x.png" alt="image photo01" />
+        </figure>
+        <figure>
+          <img src="images/photo02@2x.png" alt="image photo02" />
+        </figure>
+        <figure>
+          <img src="images/photo03@2x.png" alt="image photo03" />
+        </figure>
+        <figure>
+          <img src="images/photo04@2x.png" alt="image photo04" />
+        </figure>
+      </div>
+      <div class="detail">
+        <p><span>Meeting time:</span> Tuesdays and Thursdays - 5:30 to 8:00 pm</p>
+        <p><span>Meeting location:</span> East Park</p>
+      </div>
     </main>
     <footer>
-      <div>Follow us on <a href="#">Instagram.</a></div>
-      <div><a href="#">Contact us</a> for more details.</div>
+      <p>Follow us on <a href="#">Instagram.</a></p>
+      <p><a href="#">Contact us</a> for more details.</p>
     </footer>
   </body>
 </html>
