add hamburger menu

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
   <body>
     <header>
       <h1>East Park Basketball Club</h1>
-      <div id="hamburger"></div>
-      <nav>
+      <div id="hamburger" class="menu-off">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <nav id="g-menu">
         <a href="#">Events</a>
         <a href="#">Activities</a>
         <a href="#">Contact</a>
       </nav>
     </header>
     <div class="banner"></div>
+    <div class="bg"></div>
     <main>
       <h2>Come join the fun!</h2>
       <p>
@@ -51,7 +56,8 @@
     </main>
     <footer>
       <p>Follow us on <a href="#">Instagram.</a></p>
-      <p><a href="#">Contact us</a> for more details.</p>
+      <p><a href="#">Contact us</a> for more details!</p>
     </footer>
+    <script src="hamburger.js"></script>
   </body>
 </html>
